--- a/style/style.css
+++ b/style/style.css
@@ -18,30 +18,24 @@ body {
     font-family: 'Montserrat', sans-serif;
     font-size: clamp(14px, 0.8rem + 1vw, 18px);
     color: var(--dark-grayish-blue);
-    max-height: 100vh;
+    max-height: 100svh;
     background-color: var(--cream);
     font-weight: 500;
+}
+main{
+    display:flex;
+    align-items: center;
+    justify-content: center;
+
 }
 
 article {
     background-color: var(--white);
     border-radius: 1rem;
-    min-width: clamp(350px, 75%, 750px);
+    width: clamp(350px, 75%, 750px);
     display: flex;
     flex-direction: column;
-    overflow: hidden;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    max-height: 95%;
-    
-}
-
-figure {
-    max-height: 300px;
-    overflow: hidden;
-
+    overflow: hidden;       
 }
 
 img {
@@ -121,15 +115,8 @@ section>button:active {
 @media screen and (min-width: 1024px) {
     article {
         flex-direction: row;
-        max-height: 85%;
-
+     
     }
-
-    figure {
-        max-height: 100%;
-        max-width: 50%;
-    }
-
     section {
         justify-content: space-between;
         padding: 3rem 1.5rem;
