--- a/style/style.css
+++ b/style/style.css
@@ -23,9 +23,10 @@ body {
     font-weight: 500;
 }
 main{
-    display:flex;
-    align-items: center;
-    justify-content: center;
+   position: absolute;
+   top: 50%;
+   left: 50%;
+   transform: translate(-50%, -50%);
 
 }
 
